--- a/templates/Traditions/list.html
+++ b/templates/Traditions/list.html
@@ -7,12 +7,12 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-primary text-white-all">
             <li class="breadcrumb-item"><a href="#"></i> Asosiy</a></li>
-            <li class="breadcrumb-item"><a href="#"> Blog ro'yxati</a></li>
+            <li class="breadcrumb-item"><a href="#"> An'analar ro'yxati</a></li>
           </ol>
         </nav>
         <div class="card">
             <div class="card-header">
-                <h4>Blog ro'yxati</h4>
+                <h4>An'analar ro'yxati</h4>
                 <div class="card-header-action">
                 <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#basicModal">
                     <i class="ion-plus"></i> Yaratish
@@ -20,25 +20,25 @@
                 </div>
             </div>
             <div class="card-body">
-              {% if blogs %}
+              {% if traditions %}
               <table class="table table-hover">
                 <thead>
                   <tr>
                     <th>#</th>
-                    <th class="text-center">Rasm</th>
                     <th class="text-center">Inglizcha nomi</th>
+                    <th class="text-center">Inglizcha subtitr</th>
                     <th class="text-center">Harakatlar</th>
                   </tr>
                 </thead>
                 <tbody>
-                  {% for blog in blogs %}
+                  {% for tradition in traditions %}
                   <tr>
-                    <th scope="row">1</th>
-                    <td class="text-center"><img src="{{blog.image.url}}" width="60px" height="30px" alt="rasm"></td>
-                    <td class="text-center">{{blog.title_en}}</td>
+                    <th scope="row">{{ forloop.counter }}</th>
+                    <td class="text-center">{{tradition.subtitle_en}}</td>
+                    <td class="text-center">{{ tradition.title_en }}</td>
                     <td class="text-center">
-                        <a href="{% url 'blog_detail' blog.uuid %}" class="btn btn-warning"><i class="ion-android-create"></i></a>
-                        <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"><i class="ion-android-delete"></i></a>
+                        <a href="{% url 'tradition_detail' tradition.uuid %}" class="btn btn-warning"><i class="ion-android-create"></i></a>
+                        <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal-{{ tradition.uuid }}"><i class="ion-android-delete"></i></a>
                     </td>
                   </tr>
                   {% endfor %}
@@ -55,54 +55,21 @@
     </div>
 </section>
 
-<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">model yaratish</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <form action="{% url 'blog_create' %}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="modal-body">
-          <div class="form-group">
-            <label>Image</label>
-            <input type="file" class="form-control" name="image">
-          </div>
-          <div class="form-group">
-            <label>Inglizcha nom</label>
-            <input type="text" class="form-control" name="title_en">
-          </div>
-          <div class="form-group">
-              <label>Inglizcha tavsifi</label>
-              <textarea class="summernote" name="description_en"></textarea>
-          </div>
-        </div>
-        <div class="modal-footer bg-whitesmoke br">
-          <button type="submit" class="btn btn-primary"><i class="ion-plus"></i> Yaratish</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Yopish</button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
 
-{% for blog in blogs %}
-<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+{% for tradition in traditions %}
+<div class="modal fade" id="deleteModal-{{ tradition.uuid }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Blog</h5>
+        <h5 class="modal-title" id="exampleModalLabel">An'ana</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form action="{% url 'blog_delete' blog.uuid %}" method="post">
+      <form action="{% url 'tradition_delete' tradition.uuid %}" method="post">
         {% csrf_token %}
         <div class="modal-body">
-          <h5>Blog o'chirilsinmi</h5>
+          <h5>An'ana o'chirilsinmi?</h5>
         </div>
         <div class="modal-footer bg-whitesmoke br">
           <button type="submit" class="btn btn-danger"><i class="ion-android-delete"></i> O'chirish</button>
@@ -115,5 +82,39 @@
 {% endfor %}
 
 
-{% endblock content %}
 
+<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">An'ana yaratish</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form action="{% url 'traditions_create' %}" method="post" >
+        {% csrf_token %}
+        <div class="modal-body">
+            <div class="form-group">
+                <label>Inglizcha nom</label>
+                <input type="text" class="form-control" name="title_en">
+            </div>
+          <div class="form-group">
+            <label>Inglizcha Subtitr</label>
+            <input type="text" class="form-control" name="subtitle_en">
+          </div>
+         
+          <div class="form-group">
+              <label>Inglizcha tavsif</label>
+              <textarea class="summernote" name="content_en"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer bg-whitesmoke br">
+          <button type="submit" class="btn btn-primary"><i class="ion-plus"></i> Yaratish</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Yopish</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+{% endblock content %}
