--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@
               </a>
             </li>
             <li class="dropdown">
-              <a href="#" class="nav-link">
+              <a href="{% url 'blog_list' %}" class="nav-link">
                 <i data-feather="file-text"></i><span>Blog</span>
               </a>
             </li>
