--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -28,51 +28,51 @@
                     <form action="{% url 'about_edit' about.uuid %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="row mb-4">
-                            <div class="form-group col-nd-12">
+                            <div class="form-group col-md-12">
                                 <label>Rasm</label>
                                 <input type="file" class="form-control" name="image">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Inglizcha nomi</label>
                                 <input type="text" class="form-control" name="title_en" value="{{ about.title_en }}">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Ruscha nomi</label>
                                 <input type="text" class="form-control" name="title_ru" value="{{ about.title_ru }}">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Fransuzcha nomi</label>
                                 <input type="text" class="form-control" name="title_fr" value="{{ about.title_fr }}">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Nemischa nomi</label>
                                 <input type="text" class="form-control" name="title_de" value="{{ about.title_de }}">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Ispancha nomi</label>
                                 <input type="text" class="form-control" name="title_es" value="{{ about.title_es }}">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Tahrirlangan sana</label>
                                 <input type="text" class="form-control" value="{{ about.updated_at|date:'Y-m-d H:i' }}" readonly>
                             </div>
-                            <div class="form-group col-nd-nd-6">
+                            <div class="form-group col-md-nd-6">
                                 <label>Inglizcha tavsifi</label>
                                 <textarea class="summernote" name="description_en">{{ about.description_en }}</textarea>
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Ruscha tavsifi</label>
                                 <textarea class="summernote" name="description_ru">{{ about.description_ru }}</textarea>
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Fransuzcha tavsifi</label>
                                 <textarea class="summernote" name="description_fr">{{ about.description_fr }}</textarea>
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Nemischa tavsifi</label>
                                 <textarea class="summernote" name="description_de">{{ about.description_de }}</textarea>
                             </div>
-                            <div class="form-group col-nd-12">
+                            <div class="form-group col-md-12">
                                 <label>Ispancha tavsifi</label>
                                 <textarea class="summernote" name="description_es">{{ about.description_es }}</textarea>
                             </div>
