--- a/templates/about/why_us.html
+++ b/templates/about/why_us.html
@@ -24,51 +24,51 @@
                     <form action="{% url 'whyus_edit' why_us.uuid %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="row mb-4">
-                            <div class="form-group col-nd-12">
+                            <div class="form-group col-md-12">
                                 <label>Rasm</label>
                                 <input type="file" class="form-control" name="image">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Inglizcha nomi</label>
                                 <input type="text" class="form-control" name="title_en" value="{{ why_us.title_en }}">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Ruscha nomi</label>
                                 <input type="text" class="form-control" name="title_ru" value="{{ why_us.title_ru }}">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Fransuzcha nomi</label>
                                 <input type="text" class="form-control" name="title_fr" value="{{ why_us.title_fr }}">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Nemischa nomi</label>
                                 <input type="text" class="form-control" name="title_de" value="{{ why_us.title_de }}">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Ispancha nomi</label>
                                 <input type="text" class="form-control" name="title_es" value="{{ why_us.title_es }}">
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Tahrirlangan sana</label>
                                 <input type="text" class="form-control" value="{{ why_us.updated_at|date:'Y-m-d H:i' }}" readonly>
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Inglizcha tavsifi</label>
                                 <textarea class="summernote" name="content_en">{{ why_us.content_en }}</textarea>
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Ruscha tavsifi</label>
                                 <textarea class="summernote" name="content_ru">{{ why_us.content_ru }}</textarea>
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Fransuzcha tavsifi</label>
                                 <textarea class="summernote" name="content_fr">{{ why_us.content_fr }}</textarea>
                             </div>
-                            <div class="form-group col-nd-6">
+                            <div class="form-group col-md-6">
                                 <label>Nemischa tavsifi</label>
                                 <textarea class="summernote" name="content_de">{{ why_us.content_de }}</textarea>
                             </div>
-                            <div class="form-group col-nd-12">
+                            <div class="form-group col-md-12">
                                 <label>Ispancha tavsifi</label>
                                 <textarea class="summernote" name="content_es">{{ why_us.content_es }}</textarea>
                             </div>
